# lakeapi

./: .editorconfig  .gitignore  LICENSE  README.md  __azurite_db_blob__.json  __azurite_db_blob_extent__.json  __azurite_db_queue__.json  __azurite_db_queue_extent__.json  __azurite_db_table__.json  config_schema.json  config_test.yml  duckdb_tests.py  profile_start.bat  pyproject.toml  repo.py  start_test_instance.py  startup_perf.py  test_sqlite_adbc.py  tester.py
.github/workflows/: python-publish.yml  python-test.yml
bmsdna/lakeapi/: __init__.py
bmsdna/lakeapi/api/: api.py
bmsdna/lakeapi/context/: __init__.py  df_base.py  df_datafusion.py  df_duckdb.py  df_odbc.py  df_polars.py  df_sqlite.py  source_uri.py
bmsdna/lakeapi/core/: cache.py  config.py  dataframe.py  datasource.py  detail_endpoint.py  endpoint.py  endpoint_nearby.py  endpoint_search.py  env.py  log.py  model.py  partition_utils.py  response.py  route.py  schema_cache.py  sql_endpoint.py  types.py  uservalidation.py  yaml.py
bmsdna/lakeapi/delta/: __init__.py  colmapping.py
bmsdna/lakeapi/endpoint/: detail_endpoint.py  endpoint.py  endpoint_nearby.py  endpoint_search.py  sql_endpoint.py
bmsdna/lakeapi/polars_extensions/: delta.py  scan_delta_union.py
bmsdna/lakeapi/query/: __init__.py
bmsdna/lakeapi/standalone/: __init__.py
bmsdna/lakeapi/tools/: useradd.py  validateschema.py
bmsdna/lakeapi/utils/: async_utils.py  fast_api_utils.py  meta_cache.py
test_requests/Test Requests/: Jsonify Complex.bru  Test Nearby.bru  bruno.json  filter fruits.bru
test_server/: __init__.py  sql_docker.env
tests/: conftest.py  create_test_data.py  deltalake_tests.py  docker_conftest.py  duckdb_tests.py  test_app.py  test_benchmark.py  test_blobb.py  test_cache.py  test_colmap.py  test_complex.py  test_datamove.py  test_dtypes.py  test_duckdb.py  test_filters.py  test_mssql.py  test_nearby.py  test_openid.py  test_output_formats.py  test_partition.py  test_performance.py  test_polars.py  test_schema.py  test_search.py  test_source_uri.py  test_sql.py  test_sqlite.py  test_utils.py  utils.py
tests/data/delta/table_w_col_map/0g/: part-00006-510491fd-b429-477a-bc01-ba90158ece60.c000.snappy.parquet
tests/data/delta/table_w_col_map/1A/: part-00038-7357f408-08bf-47ab-931a-d59e9943138a.c000.snappy.parquet
tests/data/delta/table_w_col_map/1n/: part-00065-5d824480-240f-4910-9cf3-152b6cfc46b7.c000.snappy.parquet
tests/data/delta/table_w_col_map/4M/: part-00004-816874eb-5a74-436a-8967-7f6d617e41f2.c000.snappy.parquet
tests/data/delta/table_w_col_map/4P/: part-00047-b1e87770-7221-43b8-a74c-44ae08076a09.c000.snappy.parquet
tests/data/delta/table_w_col_map/4Z/: part-00005-ea0c83d4-7e32-46a0-beca-f49e79046b80.c000.snappy.parquet
tests/data/delta/table_w_col_map/5d/: part-00043-d28488eb-b7aa-4282-b8c2-eeaea5350377.c000.snappy.parquet
tests/data/delta/table_w_col_map/6A/: part-00050-397907f6-5eb8-4d1a-bbb7-3433cec51327.c000.snappy.parquet
tests/data/delta/table_w_col_map/6Q/: part-00054-31997fb2-91ff-43b2-824e-103cc0c7d756.c000.snappy.parquet
tests/data/delta/table_w_col_map/6c/: part-00012-6259bde6-bdf7-4453-a230-0f2520a6240c.c000.snappy.parquet
tests/data/delta/table_w_col_map/75/: part-00010-c80ce068-8c6b-4b8d-aba4-7e109eaf17c7.c000.snappy.parquet
tests/data/delta/table_w_col_map/7L/: part-00030-3fa5ac1c-ca8a-451e-a1ac-359ea13e12a4.c000.snappy.parquet
tests/data/delta/table_w_col_map/7w/: part-00000-be76109f-fbcd-49b1-8849-5fdf6c78f9bd.c000.snappy.parquet
tests/data/delta/table_w_col_map/8r/: part-00068-6aa18a58-b31a-4343-9a94-5132835119af.c000.snappy.parquet
tests/data/delta/table_w_col_map/95/: part-00017-7fb2d4cf-df89-46a2-b5a2-8d7de9757b69.c000.snappy.parquet
tests/data/delta/table_w_col_map/97/: part-00038-bb2ca269-9b06-433d-8733-e714448dda93.c000.snappy.parquet
tests/data/delta/table_w_col_map/AM/: part-00009-545c6d8c-9ac6-4c20-8023-20d6103f6c95.c000.snappy.parquet
tests/data/delta/table_w_col_map/AR/: part-00004-f38882b7-1ef9-4683-ab66-1d3903d85885.c000.snappy.parquet
tests/data/delta/table_w_col_map/BI/: part-00044-4b8b65e2-6637-4999-a8dd-6327a3a34805.c000.snappy.parquet
tests/data/delta/table_w_col_map/BJ/: part-00037-982dee05-6421-4a34-94d8-b75936d128b0.c000.snappy.parquet
tests/data/delta/table_w_col_map/BP/: part-00065-8e29739a-c689-4913-923f-b409ab10a6f3.c000.snappy.parquet
tests/data/delta/table_w_col_map/Bo/: part-00077-9848ed11-d583-48d5-9519-432fc3fecebd.c000.snappy.parquet
tests/data/delta/table_w_col_map/Ch/: part-00024-05f68786-ee96-4d6c-8bf8-54cd722fc652.c000.snappy.parquet
tests/data/delta/table_w_col_map/DM/: part-00068-2786f3ce-36aa-487a-9e21-cf67fd2200ea.c000.snappy.parquet
tests/data/delta/table_w_col_map/Dd/: part-00013-ebd4ebfd-09f8-449a-97f1-24a6dbe6a3b9.c000.snappy.parquet
tests/data/delta/table_w_col_map/Dj/: part-00001-b9e46f6e-c6ce-4b84-a756-016350dd00a3.c000.snappy.parquet
tests/data/delta/table_w_col_map/E2/: part-00051-7603549b-ff90-4fa3-a316-ca8f9390950d.c000.snappy.parquet
tests/data/delta/table_w_col_map/EQ/: part-00006-39a177fb-d211-4ef1-a036-059820dc9def.c000.snappy.parquet
tests/data/delta/table_w_col_map/Fk/: part-00057-2bea3d40-0236-46bc-b1d4-85bb1d7112a9.c000.snappy.parquet
tests/data/delta/table_w_col_map/Ft/: part-00046-583c311c-45d7-4590-96ff-157e8366390c.c000.snappy.parquet
tests/data/delta/table_w_col_map/G6/: part-00008-c4ae5c2d-a23d-48a0-920e-b099ff55dba0.c000.snappy.parquet
tests/data/delta/table_w_col_map/GS/: part-00048-3ec7ca53-eef9-4e67-888f-bec41669d79c.c000.snappy.parquet
tests/data/delta/table_w_col_map/HN/: part-00058-cc1e9a26-6c3d-4288-b378-2cf2ba7745af.c000.snappy.parquet
tests/data/delta/table_w_col_map/HZ/: part-00042-9926dc4b-c61d-49c7-933a-9a9535a5d177.c000.snappy.parquet
tests/data/delta/table_w_col_map/IG/: part-00002-8edfa65e-7cb2-4f82-8771-579acedd6f7d.c000.snappy.parquet
tests/data/delta/table_w_col_map/II/: part-00059-422f439d-c57f-47e2-bef8-1e199e0fe46c.c000.snappy.parquet
tests/data/delta/table_w_col_map/IV/: part-00053-318b80d6-8bef-4057-8890-79bd5db60cac.c000.snappy.parquet
(+293 files in other folders)
