[project]
name = "bmsdna-lakeapi"
version = "0.25.2"
description = ""
authors = [{ name = "DWH Team", email = "you@example.com" }]
dependencies = [
    "pyyaml ~=6.0",
    "duckdb >=1.1.0,<2",
    "polars >=1.12.0,<2",
    "sqlglot >=24.0.0",
    "fastexcel >=0.10.4",
    "argon2-cffi >=23.1.0,<24",
    "xlsxwriter >=3.1.0,<4",
    "pyjwt >=2.6.0,<3",
    "ruamel.yaml >=0.18.5",
    "fastapi >=0.110.0",
    "arrow-odbc >=5.0.0",
    "expandvars >=0.12.0",
    "fsspec >=2024.2.0,<2025",
    "adlfs >=2024.2.0,<2025",
    "deltalake2db >=1.1.4",
]
requires-python = "~=3.10"

[project.scripts]
validate_lakeapi_schema = "bmsdna.lakeapi.tools.validateschema:validate_schema_cli"
add_lakeapi_user = "bmsdna.lakeapi.tools.useradd:useradd_cli"

[project.optional-dependencies]
polars = ["fastexcel"]
auth = ["argon2-cffi", "pyjwt"]
useradd = ["ruamel.yaml"]
odbc = ["arrow-odbc"]
pandas = ["pandas >=2.1.0,<3"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
venv = ".venv"
venvPath = "."
pythonVersion = "3.10"
typeCheckingMode = "standard"

[tool.black]
line-length = 119

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@(abc.)?abstractmethod",
    "raise AssertionError",
    "raise NotImplementedError",
]

[tool.uv]
native-tls = true
keyring-provider = "subprocess"

[[tool.uv.index]]
name = "BMSAzureDevOps"
url = "https://VssSessionToken@pkgs.dev.azure.com/bmeurope/_packaging/BMS/pypi/simple/"
explicit = true
publish-url = "https://pkgs.dev.azure.com/bmeurope/_packaging/BMS/pypi/upload/"

[tool.hatch.build.targets.wheel]
packages = ["bmsdna"]

[dependency-groups]
dev = [
    "pyright >=1.1.308,<2",
    "uvicorn >=0.29.0",
    "psutil >=5.9.5,<6",
    "ruff >=0.4.7",
    "pyarrow-stubs>=17.19",
]
test = [
    "faker >=22.2.0,<23",
    "pytest >=7.3.1,<8",
    "httpx >=0.26.0",
    "pytest-env >=1.1.3,<2",
    "pytest-cov >=4.0.0,<5",
    "pytest-benchmark >=4.0.0,<5",
    "pytest-monitor >=1.6.5,<2",
    "coverage [toml]>=7.2.7,<8",
    "docker >=7.0.0,<8",
    "pyodbc >=5.0.1,<6",
    "azure-storage-blob >=12.12.0,<13",
    "adbc-driver-sqlite >=0.10.0",
    "python-dotenv >=1.0.1,<2",
    "deltalake>=1.1.4",
    "pytest-asyncio>=0.23.8",
]
